--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
     "imports-loader": "^0.7.1",
     "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
+    "pug": "^2.0.0-rc.4",
+    "pug-html-loader": "^1.1.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
